--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -10,26 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="meetupvancouver.com.meetupvancouver.EventDetails">
 
-    <Button
-        android:text="Save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginBottom="15dp"
-        android:id="@+id/button2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
-
-    <Button
-        android:text="Cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:id="@+id/button3"
-        android:layout_alignBaseline="@+id/button2"
-        android:layout_alignBottom="@+id/button2"
-        android:layout_toEndOf="@+id/button2" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,7 +18,8 @@
         android:id="@+id/editText12"
         android:layout_below="@+id/editText2"
         android:layout_alignStart="@+id/editText2"
-        android:hint="Host Name" />
+        android:hint="Host Name"
+        android:singleLine="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -48,18 +29,9 @@
         android:id="@+id/editText9"
         android:layout_below="@+id/editText12"
         android:layout_alignStart="@+id/editText12"
-        android:hint="Name" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:layout_below="@+id/editText9"
-        android:layout_alignStart="@+id/editText9"
-        android:id="@+id/editText15"
-        android:layout_alignParentEnd="true"
-        android:hint="Event Description" />
+        android:hint="Attendee"
+        android:singleLine="true"
+        android:selectAllOnFocus="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -70,26 +42,29 @@
         android:id="@+id/editText2"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:hint="Event Name" />
+        android:hint="Event Name"
+        android:singleLine="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPostalAddress"
         android:ems="10"
-        android:id="@+id/editText18"
-        android:layout_below="@+id/editText15"
+        android:layout_marginTop="41dp"
+        android:id="@+id/editText22"
+        android:layout_below="@+id/editText12"
         android:layout_alignParentStart="true"
-        android:hint="Location" />
+        android:hint="Location"
+        android:singleLine="true" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="time"
         android:ems="10"
-        android:layout_below="@+id/editText18"
+        android:layout_below="@+id/editText22"
         android:layout_alignParentStart="true"
-        android:id="@+id/editText19"
+        android:id="@+id/editText23"
         android:hint="Time" />
 
     <EditText
@@ -97,9 +72,39 @@
         android:layout_height="wrap_content"
         android:inputType="date"
         android:ems="10"
-        android:layout_below="@+id/editText19"
-        android:layout_alignEnd="@+id/editText19"
-        android:id="@+id/editText20"
+        android:layout_below="@+id/editText23"
+        android:layout_alignEnd="@+id/editText23"
+        android:id="@+id/editText24"
         android:hint="Date" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:layout_below="@+id/editText24"
+        android:id="@+id/editText25"
+        android:layout_above="@+id/button2"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:hint="Event Description" />
+
+    <Button
+        android:text="Save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/button2"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/editText24"
+        android:layout_marginEnd="57dp" />
+
+    <Button
+        android:text="Cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button3"
+        android:layout_below="@+id/editText25"
+        android:layout_toEndOf="@+id/editText24" />
 
 </RelativeLayout>
