added buttons to bring from map to host event details

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -40,5 +40,10 @@
             android:text="Move the camera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Host Event"
+            android:id="@+id/hostButton"/>
     </LinearLayout>
 </FrameLayout>
