--- a/app/src/main/res/layout/activity_show_event.xml
+++ b/app/src/main/res/layout/activity_show_event.xml
@@ -93,5 +93,13 @@
         android:layout_alignBottom="@+id/textView9"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:text="Home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/homeButton" />
+
 
 </RelativeLayout>
