--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,7 +105,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/create_event"
+                android:text="User Area"
                 android:theme="@style/ThemeOverlay.MyDarkButton" />
 
         </LinearLayout>
